--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -393,14 +393,6 @@
           </model>
         </properties>
       </component>
-      <component id="e67cb" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Fecha"/>
-        </properties>
-      </component>
       <grid id="684b4" binding="FechaIngresoPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -529,6 +521,14 @@
         </constraints>
         <properties>
           <text value="Monto"/>
+        </properties>
+      </component>
+      <component id="7b8a3" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Fecha"/>
         </properties>
       </component>
     </children>
