--- a/Grafico/IngresosYGastos2.form
+++ b/Grafico/IngresosYGastos2.form
@@ -11,7 +11,7 @@
     </properties>
     <border type="none" title=""/>
     <children>
-      <grid id="23b12" layout-manager="GridLayoutManager" row-count="14" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="23b12" layout-manager="GridLayoutManager" row-count="12" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -41,74 +41,54 @@
               <text value="Cuentas Bancarias"/>
             </properties>
           </component>
-          <component id="31d4b" class="javax.swing.JButton" binding="button3" default-binding="true">
-            <constraints>
-              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16757148"/>
-              <foreground color="-394241"/>
-              <text value="Button"/>
-            </properties>
-          </component>
-          <component id="8ed27" class="javax.swing.JButton" binding="button4" default-binding="true">
-            <constraints>
-              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16757148"/>
-              <foreground color="-394241"/>
-              <text value="Button"/>
-            </properties>
-          </component>
-          <component id="dbcd0" class="javax.swing.JButton" binding="button5" default-binding="true">
+          <component id="dbcd0" class="javax.swing.JButton" binding="plazosFijosButton" default-binding="true">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16757148"/>
               <foreground color="-394241"/>
-              <text value="Button"/>
+              <text value="Plazos Fijos"/>
             </properties>
           </component>
-          <component id="dbcdf" class="javax.swing.JButton" binding="button6" default-binding="true">
+          <component id="dbcdf" class="javax.swing.JButton" binding="prestamosButton" default-binding="true">
             <constraints>
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16757148"/>
               <foreground color="-394241"/>
-              <text value="Button"/>
+              <text value="Prestamos"/>
             </properties>
           </component>
-          <component id="37772" class="javax.swing.JButton" binding="button7" default-binding="true">
+          <component id="37772" class="javax.swing.JButton" binding="tarjetaDeCreditoButton" default-binding="true">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16757148"/>
               <foreground color="-394241"/>
-              <text value="Button"/>
+              <text value="Tarjeta de credito"/>
             </properties>
           </component>
-          <component id="b5c25" class="javax.swing.JButton" binding="button8" default-binding="true">
+          <component id="b5c25" class="javax.swing.JButton" binding="stocksButton" default-binding="true">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16757148"/>
               <foreground color="-394241"/>
-              <text value="Button"/>
+              <text value="Stocks"/>
             </properties>
           </component>
-          <component id="6c724" class="javax.swing.JButton" binding="button9" default-binding="true">
+          <component id="6c724" class="javax.swing.JButton" binding="ingresosYGastosButton" default-binding="true">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16757148"/>
               <foreground color="-394241"/>
-              <text value="Button"/>
+              <text value="Ingresos y Gastos"/>
             </properties>
           </component>
           <vspacer id="80247">
@@ -118,12 +98,12 @@
           </vspacer>
           <vspacer id="21190">
             <constraints>
-              <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <vspacer id="634a8">
             <constraints>
-              <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <hspacer id="8f7b4">
@@ -164,7 +144,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <grid id="c281c" layout-manager="GridLayoutManager" row-count="16" column-count="30" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c281c" layout-manager="GridLayoutManager" row-count="15" column-count="30" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -174,7 +154,7 @@
         <children>
           <component id="6b167" class="javax.swing.JButton" binding="eliminarGastoButton">
             <constraints>
-              <grid row="13" column="6" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="6" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Eliminar Gasto"/>
@@ -182,7 +162,7 @@
           </component>
           <vspacer id="9cd3d">
             <constraints>
-              <grid row="15" column="0" row-span="1" col-span="6" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="14" column="0" row-span="1" col-span="6" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="82d23" class="javax.swing.JTextField" binding="tfFuenteIngreso">
@@ -219,7 +199,7 @@
               <text value="Cuenta de Banco"/>
             </properties>
           </component>
-          <component id="7475e" class="javax.swing.JComboBox" binding="cbCuentaBanco">
+          <component id="7475e" class="javax.swing.JComboBox" binding="cbCuentaBancoIng">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -283,7 +263,7 @@
           </grid>
           <component id="3d810" class="javax.swing.JTextField" binding="gastoIDTextField">
             <constraints>
-              <grid row="13" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="12" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -291,7 +271,7 @@
           </component>
           <component id="bc147" class="javax.swing.JLabel">
             <constraints>
-              <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Inserta el ID del Gasto"/>
@@ -299,7 +279,7 @@
           </component>
           <component id="98371" class="javax.swing.JLabel">
             <constraints>
-              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Inserta el ID del Ingreso:"/>
@@ -307,7 +287,7 @@
           </component>
           <component id="8b19d" class="javax.swing.JTextField" binding="ingresoIDTextField">
             <constraints>
-              <grid row="12" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="11" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -315,7 +295,7 @@
           </component>
           <component id="37861" class="javax.swing.JButton" binding="eliminarIngresoButton">
             <constraints>
-              <grid row="12" column="6" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="6" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Eliminar Ingreso"/>
@@ -363,23 +343,23 @@
               <text value="Monto"/>
             </properties>
           </component>
-          <component id="f1e26" class="javax.swing.JButton" binding="agregarIngresoButton" default-binding="true">
+          <component id="f1e26" class="javax.swing.JButton" binding="btnAgregarIngr">
             <constraints>
-              <grid row="6" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Agregar Ingreso"/>
             </properties>
           </component>
-          <component id="bf606" class="javax.swing.JButton" binding="agregarGastosButton" default-binding="true">
+          <component id="bf606" class="javax.swing.JButton" binding="btnAgregarGast">
             <constraints>
-              <grid row="6" column="7" row-span="1" col-span="11" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="7" row-span="1" col-span="11" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Agregar Gastos"/>
             </properties>
           </component>
-          <component id="3c106" class="javax.swing.JComboBox" default-binding="true">
+          <component id="3c106" class="javax.swing.JComboBox" binding="cbCuentaBAncoGast">
             <constraints>
               <grid row="1" column="9" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -430,7 +410,7 @@
               <text value=""/>
             </properties>
           </component>
-          <grid id="852e7" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="852e7" binding="FechaGastosPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="9" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -441,18 +421,17 @@
           </grid>
           <scrollpane id="f713c">
             <constraints>
-              <grid row="7" column="0" row-span="5" col-span="10" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="0" row-span="5" col-span="10" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="1d528" class="javax.swing.JScrollBar" binding="scrollBar1" default-binding="true">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
           </scrollpane>
-          <component id="1d528" class="javax.swing.JScrollBar" binding="scrollBar1" default-binding="true">
-            <constraints>
-              <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
         </children>
       </grid>
       <component id="fc053" class="javax.swing.JLabel">
