--- a/Grafico/ConsultarMovimientos.form
+++ b/Grafico/ConsultarMovimientos.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="MovPanel" layout-manager="GridLayoutManager" row-count="8" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1025" height="535"/>
+      <xy x="20" y="20" width="1027" height="535"/>
     </constraints>
     <properties>
       <background color="-16757148"/>
@@ -97,14 +97,6 @@
           </model>
         </properties>
       </component>
-      <component id="bc7f4" class="javax.swing.JList" binding="list1" default-binding="true">
-        <constraints>
-          <grid row="5" column="4" row-span="1" col-span="5" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="d4032" class="javax.swing.JButton" binding="btnBuscar">
         <constraints>
           <grid row="3" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -139,6 +131,14 @@
           <foreground color="-394241"/>
           <text value="Movimiento de Cuentas"/>
         </properties>
+      </component>
+      <component id="4974f" class="javax.swing.JTable" binding="movimientosTable">
+        <constraints>
+          <grid row="5" column="7" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
