--- a/Grafico/CuentaBancariaG.form
+++ b/Grafico/CuentaBancariaG.form
@@ -194,20 +194,20 @@
           <text value="Consultar Movimientos"/>
         </properties>
       </component>
-      <scrollpane id="799e">
+      <scrollpane id="799e" binding="spCuentaBanco">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="317e8" class="javax.swing.JList" binding="list1" default-binding="true">
+          <component id="1ce67" class="javax.swing.JTable" binding="tableCuentasBanco">
             <constraints/>
             <properties/>
           </component>
         </children>
       </scrollpane>
-      <grid id="3761c" binding="PastelitoPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="3761c" binding="pastelitoPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
