--- a/Grafico/Tarjetas.form
+++ b/Grafico/Tarjetas.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.Tarjetas">
-  <grid id="27dc6" binding="TarjetaPanel" layout-manager="GridLayoutManager" row-count="6" column-count="13" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="tarjeta_panel" layout-manager="GridLayoutManager" row-count="6" column-count="13" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="890" height="564"/>
+      <xy x="20" y="20" width="942" height="564"/>
     </constraints>
     <properties>
       <preferredSize width="960" height="920"/>
@@ -20,7 +20,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="f424b" class="javax.swing.JButton" binding="btMenu">
+          <component id="f424b" class="javax.swing.JButton" binding="bt_menu">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -30,7 +30,7 @@
               <text value="Menu Principal"/>
             </properties>
           </component>
-          <component id="426ef" class="javax.swing.JButton" binding="cuentasBancariasButton" default-binding="true">
+          <component id="426ef" class="javax.swing.JButton" binding="cuentas_bancarias_button">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -40,7 +40,7 @@
               <text value="Cuentas Bancarias"/>
             </properties>
           </component>
-          <component id="129e3" class="javax.swing.JButton" binding="préstamoButton" default-binding="true">
+          <component id="129e3" class="javax.swing.JButton" binding="prestamo_button">
             <constraints>
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -50,7 +50,7 @@
               <text value="Préstamo"/>
             </properties>
           </component>
-          <component id="4325c" class="javax.swing.JButton" binding="plazosFijosButton" default-binding="true">
+          <component id="4325c" class="javax.swing.JButton" binding="plazos_fijos_button">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -60,7 +60,7 @@
               <text value="Plazos Fijos"/>
             </properties>
           </component>
-          <component id="4f10b" class="javax.swing.JButton" binding="tarjetasDeCreditoButton" default-binding="true">
+          <component id="4f10b" class="javax.swing.JButton" binding="tarjetas_de_credito_button">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -70,7 +70,7 @@
               <text value="Tarjetas de Credito"/>
             </properties>
           </component>
-          <component id="63b05" class="javax.swing.JButton" binding="stocksButton" default-binding="true">
+          <component id="63b05" class="javax.swing.JButton" binding="stocks_button">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -80,7 +80,7 @@
               <text value="Stocks"/>
             </properties>
           </component>
-          <component id="a491e" class="javax.swing.JButton" binding="ingresosYGastosButton" default-binding="true">
+          <component id="a491e" class="javax.swing.JButton" binding="ingresos_y_gastos_button">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -199,10 +199,10 @@
               <grid row="8" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Numero tarjeta"/>
+              <text value="Terminación del numero tarjeta"/>
             </properties>
           </component>
-          <component id="bb0dc" class="javax.swing.JTextField" binding="tfSaldoActual">
+          <component id="bb0dc" class="javax.swing.JTextField" binding="tf_saldo_actual">
             <constraints>
               <grid row="6" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -210,7 +210,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="78314" class="javax.swing.JTextField" binding="tfNumeroTarjeta">
+          <component id="78314" class="javax.swing.JTextField" binding="tf_numero_tarjeta">
             <constraints>
               <grid row="8" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -218,7 +218,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="ba028" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="ba028" class="javax.swing.JComboBox" binding="cb_tipo_tarjeta">
             <constraints>
               <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -253,7 +253,7 @@
               <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="bb7cd" class="javax.swing.JComboBox" binding="cbCuentaBancaria">
+          <component id="bb7cd" class="javax.swing.JComboBox" binding="cb_cuenta_bancaria">
             <constraints>
               <grid row="9" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -263,7 +263,7 @@
               </model>
             </properties>
           </component>
-          <component id="35c9" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
+          <component id="35c9" class="javax.swing.JButton" binding="agregar_button">
             <constraints>
               <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -271,7 +271,7 @@
               <text value="Agregar"/>
             </properties>
           </component>
-          <component id="b2408" class="javax.swing.JTextField" binding="tfLimiteCredito">
+          <component id="b2408" class="javax.swing.JTextField" binding="tf_limite_credito">
             <constraints>
               <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -303,13 +303,21 @@
         <properties/>
         <border type="none"/>
         <children>
-          <scrollpane id="ad086">
+          <scrollpane id="ad086" binding="sp_tarjetas">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <horizontalScrollBarPolicy value="32"/>
+              <verticalScrollBarPolicy value="22"/>
+            </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="57eaa" class="javax.swing.JTable" binding="tarjetas_table">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
           </scrollpane>
         </children>
       </grid>
