Ajustes del main para trabajar sin base de datos

--- a/Grafico/CuentaBancariaG.form
+++ b/Grafico/CuentaBancariaG.form
@@ -203,7 +203,9 @@
         <children>
           <component id="1ce67" class="javax.swing.JTable" binding="table_cuentas_banco">
             <constraints/>
-            <properties/>
+            <properties>
+              <autoResizeMode value="0"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
